<resources>
    <string name="app_name">OverStats</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="AboutApp">OverSurge is an app that gives you player stats, news, patch notes, and Overwatch League info. Any player entered must have a public profile and usernames are cap sensitive.</string>
    <string name="OverwatchNews">LATEST OVERWATCH NEWS</string>
    <string name="YourAccount">YOUR ACCOUNT</string>
    <string name="AccountOptional">You can save your account and it will be displayed on the home page for easy access. This is optional and can be changed at any time.</string>
    <string name="SearchPrivateProfile">This player has a private profile</string>
    <string name="AccountNotSet">Your Blizzard account has not been entered. Go to "Settings" and enter your username and tag"</string>
    <string name="AccountPrivateProfile">Your account is private. For your stats to show, switch to public profile.</string>
    <string name="AccountNotExist">The Blizzard account that you entered does not exist. Please fix it in "Settings" or check your internet connection</string>
    <string name="PlayerDetails">Tap to view more details</string>
    <string name="LatestPatchNotes">LATEST PATCH NOTES</string>
    <string name="PatchDetails">Tap to view patch notes</string>
    <string name="OverwatchLeague">OVERWATCH LEAGUE</string>
    <string name="NoMatchData">No match data is currently available</string>
    <string name="ScoreConfig">Hide/Show match scores in "Settings"</string>
    <string name="UpcomingMatch">This match has not started</string>
    <string name="OWLDetails">View more about OWL</string>
    <string name="OWLSchedule">View the OWL Schedule</string>
    <string name="OWLStanding">View the OWL Standings</string>
    <string name="SavedPlayers">SAVED ACCOUNTS</string>
    <string name="SavedAccountsText">(Your saved accounts will appear here. Tap on a player icon to view their details. Drag and drop to organize list. Tap on a player to view their
        combined SR.)</string>
    <string name="Teams">TEAMS</string>
    <string name="VS">VS</string>
    <string name="TeamLogo">Team Logo</string>
    <string name="ColorsText">COLORS:</string>
    <string name="Color1">Primary Color</string>
    <string name="Color2">Secondary Color</string>
    <string name="Color3">Tertiary Color</string>
    <string name="Location">LOCATION:</string>
    <string name="Roster">ROSTER</string>
    <string name="Headshot">Player headshot</string>
    <string name="OWLWebsite">Go to the official team website...</string>
    <string name="News">NEWS</string>
    <string name="Next">NEXT</string>
    <string name="OWLTempMsg">The 2021 Overwatch League season has not started..</string>
    <string name="tanklabel">TANK</string>
    <string name="damagelabel">DPS</string>
    <string name="supportlabel">SUPP</string>
</resources>
